syntax = "proto3";

package grpc.chatroom.server;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

enum JoinResponseCode {
  OK = 0;
  NAME_TAKEN = 1;
}

message User {
  string name = 1;
}

message UserList {
  repeated User users = 1;
}

message JoinResponse {
  JoinResponseCode responseCode = 1;
  string message = 2;

}

message ChatMessage {
  User sender = 1;
  User receiver = 2;
  string message = 3;
  uint32 likeCount = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message ChatMessageFromServer {
  ChatMessage messageFromServer = 1;
}

service ChatService {
  rpc join(User) returns (JoinResponse);
  rpc getUsers(google.protobuf.Empty) returns (UserList);
  rpc chat(stream ChatMessage) returns (stream ChatMessageFromServer);
}
